@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.38 2020/07/25 19:23:09 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.39 2021/04/09 01:48:20 greg Exp $
 #
 # Makefile for object generation programs
 #
@@ -35,7 +35,7 @@ genbeads:	genbeads.o hermite3.o
 	$(CC) $(CFLAGS) -o genbeads genbeads.o hermite3.o $(MLIB)
 
 genbox:	genbox.o
-	$(CC) $(CFLAGS) -o genbox genbox.o -lrtrad
+	$(CC) $(CFLAGS) -o genbox genbox.o -lrtrad -lwfobj
 
 genmarble:	genmarble.o ../common/random.h
 	$(CC) $(CFLAGS) -o genmarble genmarble.o $(MLIB)
@@ -99,6 +99,8 @@ gensurf.o xform.o:	../common/standard.h \
 ../common/rtmisc.h ../common/rtio.h \
 ../common/rtmath.h ../common/rterror.h \
 ../common/mat4.h ../common/fvect.h
+
+genbox.o:	../common/fvect.h ../common/objutil.h ../common/rtio.h
 
 genworm.o genrev.o gensurf.o:	../common/resolu.h ../common/rterror.h
 
